--- a/cadastro1/src/presentation/index.html
+++ b/cadastro1/src/presentation/index.html
@@ -31,7 +31,7 @@
     </main>
 
     <script>
-        window.api.loadscript('core/form.js');
+        window.api.loadscript('core/Form.js');
     </script>
 </body>
 
