--- a/aplicacoes/js-todo/src/index.html
+++ b/aplicacoes/js-todo/src/index.html
@@ -12,20 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <h2>TODO LIST</h2>
-        <h3>Add Item</h3>
-        <p>
-            <input id="new-task" type="text">
-            <button onclick="createTask()">Add</button>
-        </p>
-
-        <h3>Todo</h3>
-        <ul id="tasks">
-        </ul>
-    </div>
-    <script>window.api.loadscript('../dist/presentation/index.js')</script>
-
+    <div id="root"></div>
 </body>
 
 </html>
